--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -210,7 +210,7 @@ input {
     }
 
     &__col {
-        padding-left: 15px;
+        padding-left: 10px 0 10px 15px;
         width: calc(100% - 96px);
         border-left: 1px solid #000;
         position: relative;
